nats-micro/tests/ui/service_error_private_with_client_feature.rs
use nats_micro::service_error;

#[service_error]
enum DemoError {
    #[error("empty")]
    Empty,
}

fn main() {}
